fixed 404 and 500 pages i messed up. added percentages for lesson home

--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -60,8 +60,8 @@
 </div>
 
 <!-- hidden fields that contain whether or not you passed each quiz-->
-<p id="quiz1pass" style="display:none;">{{quiz1bool}}</p>
-<p id="quiz2pass" style="display:none;">{{quiz2bool}}</p>
-<p id="quiz3pass" style="display:none;">{{quiz3bool}}</p>
+<p id="quiz1pass" style="display:none;">{{quiz1result}}</p>
+<p id="quiz2pass" style="display:none;">{{quiz2result}}</p>
+<p id="quiz3pass" style="display:none;">{{quiz3result}}</p>
 <p id="loggedin" style="display:none;">{{loggedin}}</p>
 {%endblock%}
