--- a/pokerapp/templates/stats.html
+++ b/pokerapp/templates/stats.html
@@ -9,7 +9,11 @@
 </style> {%endblock%}{% block content %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
 
+
+<div class = 'container-user'>
 <h3 class="display-4 font-weight-normal header-main">Aggregate Results and Usage Statistics</h3>
+</div>
+
 <!-- Interactive charts containing data -->
 <div class='container'>
     <div class='row'>
