footer links todo removed as well

--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -83,9 +83,9 @@
                 <div class="col-lg-4 footer">
                     <h5 style="color:rgb(209, 204, 204)">Features</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="TODO">Login</a></li>
-                        <li><a class="text-muted" href="TODO">Home</a></li>
-                        <li><a class="text-muted" href="TODO">Lessons</a></li>
+                        <li><a class="text-muted" href="{{ url_for('login') }}">Login</a></li>
+                        <li><a class="text-muted" href="{{ url_for('home') }}">Home</a></li>
+                        <li><a class="text-muted" href="{{url_for('lessons')}}">Lessons</a></li>
                     </ul>
                 </div>
 
