validation checks complete

--- a/pokerapp/templates/Lessons/lesson3.html
+++ b/pokerapp/templates/Lessons/lesson3.html
@@ -5,6 +5,38 @@
 <button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)'); changebackgroundblue();" id="defaultOpen">Lesson 3</button>
 
 <div id="content" class="tabcontent">
+    <h3 class="display-4 font-weight-normal header-main">The Game of Poker</h3>
+    <p>Poker is a turn based game. The are stages of play come in an order: pre-flop, flop, turn and then the river. Players make betting actions during these phases. Players can fold, bet, raise or check.</p>
+    <div class="card-group">
+        <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
+            <div class="card-body">
+                <h2 class="card-title">Fold</h2>
+                <p class="card-text">A fold means the player forfeits the round, places their cards out of their hand and sits out.
+                </p>
+            </div>
+        </div>
+        <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
+            <div class="card-body">
+                <h2 class="card-title">Bet</h2>
+                <p class="card-text">A bet means the player is placing a bet into the community pot of chips.
+                </p>
+            </div>
+        </div>
+        <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
+            <div class="card-body">
+                <h2 class="card-title">Raise</h2>
+                <p class="card-text"> A raise means the player is increasing the minimum bet size with their own bet.
+                </p>
+            </div>
+        </div>
+        <div class="card cardtop" style="border-radius: 8px; background-color: transparent">
+            <div class="card-body">
+                <h2 class="card-title">Check</h2>
+                <p class="card-text"> A check is when the player does not bet further as they have already put in an amount that satisfies the current bet.
+                </p>
+            </div>
+        </div>
+    </div>
     <br><br>
     <h4>&nbsp;Pre-Flop&nbsp;</h4>
     <br>
