--- a/pokerapp/templates/Lessons/lesson2.html
+++ b/pokerapp/templates/Lessons/lesson2.html
@@ -244,7 +244,7 @@
 <!-- quiz content for lesson 2-->
 <!-- created dynamically with JS-->
 <div id="quiz2" class="tabcontent">
-    <h3>Quiz 2: Hand Rankings</h3>
+    <h3 class="display-4 font-weight-normal header-main">Quiz 2: Hand Rankings</h3>
 
     <button id="Quiz2" class="btn btn-dark">Click to Begin!</button>
     <div id="quiz"></div>
