--- a/pokerapp/templates/Lessons/lesson3.html
+++ b/pokerapp/templates/Lessons/lesson3.html
@@ -10,7 +10,7 @@
     <br>
     <p>
         The PreFlop is the first stage of poker, this is where the players are all dealt 2 'hidden' cards. These cards are kept hidden to all players except those to who they belong to. After being dealt these cards, 5 cards are added face up to the table (in
-        the order shown below). A player makes their hand. Preflop explanation MUST INCLUDE REFERENCE TO IVEY LEAGUE FOR ANIMATIONS :https://www.youtube.com/watch?v=09jmSZ-lKRM TODO
+        the order shown below). A player makes their hand.
     </p>
 
     <br><br>
