final bug fixes

--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -9,7 +9,7 @@
 </style>{%endblock%}{% block content %}
 
 <div class = 'container-user'>
-<h3 class="display-4 font-weight-normal header-main">Welcome: {{ user.username }}</h3>
+<h3 class="display-4 font-weight-normal header-main">{{ user.username }}'s Results.</h3>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
 
